--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "@material-ui/core": "3.7.1",
     "@material-ui/icons": "3.0.2",
     "a-frame": "0.0.0",
+    "aframe": "^1.0.3",
+    "aframe-extras": "^6.0.1",
+    "aframe-orbit-controls": "^1.2.0",
+    "aframe-react": "^4.4.0",
+    "aframe-ui-components": "^1.0.2",
     "material-ui": "1.0.0-beta.34",
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-scripts": "2.0.3"
   },
   "devDependencies": {},
