--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "material-ui": "1.0.0-beta.34",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.9.0",
     "react-scripts": "2.0.3"
   },
   "devDependencies": {},
